2007-07-18  David Bateman  <dbateman@free.fr>

         * zfstream.cc (int_type gzfilebuf::pbackfail (int_type)): New
         method to putback a character when the putback position in the
         internal buffer doesn't exist.
         * zfstream.h (int_type pbackfail (int_type)): Declaration it.

2007-07-14  Michael Goffioul  <michael.goffioul@swing.be>

	* src/ov-bool-sparse.cc (octave_sparse_bool_matrix:load_hdf5):
	Use OCTAVE_LOCAL_BUFFER for temporary boolean value.
	
2007-06-27  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/sparse.cc (Fspdiag): Ensure spdiag(zeros(1,0)) returns
	0x0 matrix. Doc update.
	* data.cc (Fdiag): Doc update.

2007-06-28  John W. Eaton  <jwe@octave.org>

	* ov-cell.cc (octave_cell::subsasgn): Given x = {}, convert to
	struct for assignments like x(1).f = val;

	* oct-stream.cc (octave_scan_1): New function
	(octave_scan): Use it.  Handle fmt.width.

	* graphics.h (axes::axes_properties::visible): New data member.
	* graphics.cc (axes::axes_properties::axes_properties, 
	axes::axes_properties::set, axes::axes_properties::get, 
	axes::axes_properties::factory_defaults): Handle visible property.

2007-06-27  Kai Habel  <kai.habel@gmx.de>

	* graphics.h (color_values::color_values): Arg is now std:string
	instead of char.  Call str2rgb, not c2rgb.
	* graphics.h, graphics.cc: (color_values::str2rgb): Rename from
	c2rgb.  Handle long color names, not just single char abbreviations.

2007-06-27  David Bateman  <dbateman@free.fr>
	
	* src/load-save.cc (Fsave): Ensure header is written for non
	existent file with "-append".
	* src/ls-hdf5.h: First steps towards having append work for hdf5.
	
2007-06-26  John W. Eaton  <jwe@octave.org>

	* src/load-save.cc (Fsave): Open files correctly for -append.
	Don't write file headers if appending.  Error for -append -hdf5.

2007-06-25  Olaf Till  <i7tiol@t-online.de>

	* oct-stream.h (octave_stream_list::list): Use std::map.
	(octave_stream_list::curr_len): Delete data member.